--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
-diesel = "2.1.5"
+diesel = { version = "2.1.5", features = ["postgres"] }
