--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
-diesel = { version = "2.1.5", features = ["postgres"] }
+diesel = { version = "2.1.5", features = ["postgres", "chrono"] }
